tests/fixtures/invalid/no_runtime/ref_handle.lby
# A `no-runtime` module may not name a borrowed reference-counted `ref<T>` handle
# (it belongs to the safe-tier RC surface, which the freestanding tier drops). The
# `ref<i64>` parameter type is rejected with L0441.
no-runtime

fn peek r ref<i64> -> i64
    0

fn main -> i64
    0
